# face

./: yolov7-face.cpp
face_detect/: CMakeLists.txt  facedetect.cpp  facedetect.h  postprocess.cu  postprocess.h  preprocess.cu  preprocess.h
face_recognition/: CMakeLists.txt  facerecognition.cpp  facerecognition.h
